feat: thêm cache cho các website

--- a/Thiết lập.yaml
+++ b/Thiết lập.yaml
@@ -1,7 +1,11 @@
-Websites:
+Danh sách cào:
   - Liquipedia:
       Tên lịch: Tên 1
       URL: https://tl.net/calendar/xml/calendar.xml
+
+  - Liquipedia:
+      Tên lịch: Tên 1
+      URL: https://www.tonggiaophanhanoi.org/thang-muoi-hai-2024/
 
   - Meetup:
       Tên lịch: Tên 1
@@ -10,6 +14,10 @@ Websites:
   - Ticketbox:
       Tên lịch: Tên 1
       URL: https://ticketbox.vn/events/ho-chi-minh
+
+  - Săn sự kiện:
+      Tên lịch: Tên 1
+      URL: https://sansukien.com/danh-sach-su-kien
 
   - Esportapi:
       Tên lịch: Tên 1
