--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
     "dev": "deno run --watch -A --unstable-temporal main.ts",
-    "test": "deno run --watch -A --unstable-temporal scr/test.ts",
+    "test": "deno run --watch -A --unstable-temporal test.ts",
     "testFile": "deno run --watch -A --unstable-temporal "
   },
   "lint": {
@@ -15,10 +15,16 @@
   "compilerOptions": {
   },
   "imports": {
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.2",
     "@std/log": "jsr:@std/log@^0.224.11",
+    "@std/path": "jsr:@std/path@^1.0.8",
+    "@std/text": "jsr:@std/text@^1.0.8",
     "@std/yaml": "jsr:@std/yaml@^1.0.5",
     "hast-util-from-html": "npm:hast-util-from-html@^2.0.3",
-    "hast-util-select": "npm:hast-util-select@^6.0.3"
+    "hast-util-select": "npm:hast-util-select@^6.0.3",
+    "hast-util-to-text": "npm:hast-util-to-text@^4.0.2",
+    "googleapis": "npm:googleapis@^144.0.0",
+    "@google-cloud/local-auth": "npm:@google-cloud/local-auth@^3.0.1"
   },
   "nodeModulesDir": "none"
 }
