--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,9 @@
   },
   "deno.enable": true,
   "deno.lint": true,
+  "deno.unstable": ["temporal", "kv"],
   "editor.formatOnSave": true,
   // "editor.formatOnSave": false,
-  "deno.config": "./deno.json",
   "editor.defaultFormatter": "denoland.vscode-deno",
   "[typescriptreact]": {
     "editor.defaultFormatter": "denoland.vscode-deno"
