--- a/deno.jsonc
+++ b/deno.jsonc
@@ -20,10 +20,13 @@
     "@std/path": "jsr:@std/path@^1.0.8",
     "@std/text": "jsr:@std/text@^1.0.8",
     "@std/yaml": "jsr:@std/yaml@^1.0.5",
+
     "hast-util-from-html": "npm:hast-util-from-html@^2.0.3",
     "hast-util-select": "npm:hast-util-select@^6.0.3",
     "hast-util-to-text": "npm:hast-util-to-text@^4.0.2",
+
     "googleapis": "npm:googleapis@^144.0.0",
+    "@googleapis/calendar": "npm:@googleapis/calendar@^9.7.9",
     "@google-cloud/local-auth": "npm:@google-cloud/local-auth@^3.0.1"
   },
   "nodeModulesDir": "none"
