--- a/deno.json
+++ b/deno.json
@@ -16,6 +16,7 @@
   "compilerOptions": {
   },
   "imports": {
+    "@std/fs": "jsr:@std/fs",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.2",
     "@std/log": "jsr:@std/log@^0.224.11",
     "@std/path": "jsr:@std/path@^1.0.8",
