--- a/.github/workflows/Chạy định kỳ.yaml
+++ b/.github/workflows/Chạy định kỳ.yaml
@@ -28,3 +28,11 @@ jobs:
       
       - name: Chạy chương trình
         run: deno task start
+
+      - name: git
+        run: |
+          git config --global user.email "ganuongphap@gmail.com"
+          git config --global user.name "ooker"
+          git add -A 
+          git commit -m "test"
+          git push
