--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "request": "launch",
       "name": "Launch Program",
       "type": "node",
-      "program": "${workspaceFolder}/main.ts",
-      // "program": "${file}",
+      // "program": "${workspaceFolder}/main.ts",
+      "program": "${file}",
       "cwd": "${workspaceFolder}",
       "env": {},
       "runtimeExecutable": "C:\\Users\\ganuo\\AppData\\Local\\Microsoft\\WinGet\\Links\\deno.EXE",
